2006-09-23  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/actions/tools-actions.c
	* app/actions/tools-commands.[ch]: add new actions for
	toggling "fixed-aspect" and "fixed-center" options of
	rectangle tools.

	* app/tools/gimprectangletool.[ch]
	* app/tools/gimprectangleselecttool.c
	* app/tools/gimpcroptool.c: rely on new actions for
	keyboard control, not on modifiers pressed after
	mouse1-down.
	
2006-09-22  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/widgets/gimppropwidgets.[ch]
	* app/tools/gimprectangleoptions.c
	* app/tools/gimprectangletool.c: more work on option
	layout and handling.
	
2006-09-22  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* libgimpwidgets/gimppropwidgets.[ch]: revert previous
	change; was not necessary.

2006-09-22  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpstatusbar.c (gimp_statusbar_progress_style_set):
	terminate the spaces string correctly. Spotted by bill.

2006-09-22  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpstatusbar.[ch]: changed all message setting
	functions to use printf-style argument lists. Added new API to
	show a temporary message that stays on top regardless of any other
	message activity and disappears after 3 seconds.

	* app/actions/edit-commands.c: show a statusbar message when
	pasting fails because the clipboard contains no image data. Pop a
	dialog when "Paste as New" fails. Addresses bug #357059 for
	internal functions.

	* app/display/gimpdisplayshell-title.c
	* app/gui/gui.c
	* app/tools/gimptool.c: changed accordingly.

2006-09-22  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-selection.c: always recalculate the
	selection when restarting it.	

2006-09-22  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell-callbacks.c
	(gimp_display_shell_space_released): also look at
	shell->space_release_pending when deciding whether to return early.

2006-09-22  Sven Neumann  <sven@gimp.org>
